--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'Crimean War, 1853-1856 -- Fiction'
+- GITenberg
 title: 'The Interpreter: A Tale of the War'
 url: http://www.gutenberg.org/ebooks/40660
